--- a/ReportGenerator.Client.Wpf/.vscode/launch.json
+++ b/ReportGenerator.Client.Wpf/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/bin/Debug/net5.0/ReportGenerator.Client.Wpf.dll",
+            "program": "${workspaceFolder}/bin/Debug/net5.0-windows/ReportGenerator.Client.Wpf.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
